--- a/package.json
+++ b/package.json
@@ -7,17 +7,25 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc --noEmit && vite build",
+    "build:mobile": "npm run build && npx cap sync",
+    "mobile:open": "npx cap open android",
+    "mobile:build": "npm run build:mobile && npx cap open android",
     "preview": "vite preview",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0"
   },
   "dependencies": {
+    "@capacitor/android": "^8.1.0",
+    "@capacitor/cli": "^8.1.0",
+    "@capacitor/core": "^8.1.0",
     "@supabase/supabase-js": "^2.39.3",
     "@types/leaflet": "^1.9.21",
+    "@types/styled-components": "^5.1.36",
     "leaflet": "^1.9.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-flow-renderer": "^10.3.17",
-    "react-leaflet": "^4.2.1"
+    "react-leaflet": "^4.2.1",
+    "styled-components": "^6.3.11"
   },
   "devDependencies": {
     "@types/react": "^18.2.47",
